--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.19.4",
+    "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.3",
+    "cross-env": "^5.2.1",
+    "express": "^4.17.1",
     "morgan": "^1.9.0",
-    "promise.prototype.finally": "^3.1.0",
+    "promise.prototype.finally": "^3.1.2",
+    "sequelize": "^5.21.3",
     "sqlite3": "^4.0.2"
   }
 }
