--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "techdegree-fullstackjs-rest-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "javascript-project-9",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon ./app.js",
-    "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.19.4",
-    "sequelize-cli": "^5.5.1"
+    "start": "node ./bin/www"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
-    "cross-env": "^5.2.1",
-    "express": "^4.17.1",
-    "morgan": "^1.9.0",
-    "promise.prototype.finally": "^3.1.2",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
     "sequelize": "^5.21.3",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.1.1"
   }
 }
