--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "sequelize": "^5.21.3",
+    "sequelize": "^5.21.4",
     "sqlite3": "^4.1.1"
   }
 }
