--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^5.2.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "promise.prototype.finally": "^3.1.0",
     "morgan": "~1.9.1",
     "sequelize": "^5.21.4",
     "sqlite3": "^4.1.1"
